apps/base/fullstack/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    toolkit.fluxcd.io/tenant: apps
